--- a/src/Assignment-6/assignment6.html
+++ b/src/Assignment-6/assignment6.html
@@ -5,21 +5,121 @@
 	<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 	<meta http-equiv="Pragma" content="no-cache" />
 	<meta http-equiv="Expires" content="0" />
-	<script src="bundle.js" type="text/javascript"></script>
+	<!-- <script src="bundle.js" type="text/javascript"></script> -->
 </head>
 
 <body>
 	<div id="container">
+		<!-- Start your code from here -->
+		<form class="form">
+			<div class="countInfo">
+				<p><strong>Characters:</strong> <span class="charCount">00</span></p>
+				<p><strong>Threads:</strong> <span class="threadCount">00</span></p>
+			</div>
+			<textarea class="textArea" required="" wrap="soft" placeholder="Type Something..." onkeyup="textInfo(this);"></textarea>
+			<button type="submit" class="btn">Thread</button>
+		</form>
 
-	<!-- Start your code from here -->
-
+		<div class="threadBox">
+			<div class="thread">
+				<p>
+					<span class="sl">✨</span><br>
+					Your Thread Will Be Here.🔥<br>
+					<br>
+					The character limit for each tweet is 275. <br>
+					<br>
+				</p>
+			</div>
+		</div>
 
 	<!-- End your code -->
 
 	</div>
 
 	<script type="text/javascript">
-	// write your javascript code here
+		const dom = (s) => document.querySelector(s);
+		const form = dom(".form")
+		const charCount = dom(".charCount")
+		const threadCount = dom(".threadCount")
+		const threadBox = dom(".threadBox")
+
+		let size = 275;
+		let tweetsArr = [];
+
+		function textInfo(item) {
+			let length = item.value.length;
+			charCount.innerHTML = length;
+			threadCount.innerHTML = Math.ceil(length/size);
+		}
+
+		function displayUI(listParent, arr = []) {
+			listParent.innerHTML = arr.map((el, i) => {
+				return `
+				<article class="thread" data-index="${i}">
+				<div class="tools">
+				<span class="index">${i < 9 ? '0' + (i + 1): i + 1}</span>
+				<span class="close" data-index="${i}">❌</span>
+				</div>
+				<p class="tweet">
+				${el}
+				</p>
+				</article>`;
+			})
+			.join("");
+		}
+
+		function tweets(str) {
+			let whiteSpaceSplit = str.split(' ');
+			let result = [];
+			let totalLength = 0;
+			let sentence = '';
+
+			for (let i = 0; i < whiteSpaceSplit.length; i++) {
+				let curWord = whiteSpaceSplit[i];
+				let curWordLen = curWord.length;
+				sentence += curWord + ' ';
+				totalLength += curWordLen + 1;
+
+				if (totalLength >= size) {
+					sentence = sentence.trim();
+
+					let lenDiff = sentence.length - size;
+					if (lenDiff > 0) {
+						let whiteSpaceLastIndex = sentence.lastIndexOf(' ');
+						sentence = sentence.slice(0, whiteSpaceLastIndex);
+						i--;
+					}
+				result.push(sentence);
+				totalLength = 0;
+				sentence = '';
+				}
+
+				if (i === whiteSpaceSplit.length -1 && totalLength <= size && sentence !== '') {
+					result.push(sentence.trim());
+				}
+			}
+			return result;
+		}
+
+		function thread(e) {
+			e.preventDefault();
+
+			const thread = dom(".thread");
+			tweetsArr = tweets(dom(".textArea").value);
+			displayUI(threadBox, tweetsArr);
+		}
+
+		form.addEventListener("submit", thread);
+
+		function deleteThread(e) {
+			const [el, index] = [e.target, e.target.dataset.index];
+			let txt = e.target.dataset.para;
+			if(el.classList.contains("close")) {
+				tweetsArr.splice(index, 1);
+				displayUI(threadBox, tweetsArr);
+			}
+		}
+		threadBox.addEventListener("click", deleteThread);
 
 	</script>
 
